--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -87,6 +87,13 @@
                     <a href="#">Другие линии</a>
                 </div>
             </div>
+            <div class="dropdown">
+                <a href="#">Лаборатория</a>
+                <div class="dropdown-content">
+                    <a href="{% url 'laboratory:line_lab' 4 %}">Линия №4</a>
+                    <a href="#">Другие линии</a>
+                </div>
+            </div>
             <a href="admin/">Админка</a>
         </div>
     </nav>
